--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+.light .slick-prev::before,
+.light .slick-next::before {
+  color: black !important;
+}
